Prepare to colab

--- a/virtual_assistant.ipynb
+++ b/virtual_assistant.ipynb
@@ -13,6 +13,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "95a78a8a-2103-47c2-9720-6678e3125e9e",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# download resources\n",
+    "\n",
+    "!wget https://cristianofrstorage.blob.core.windows.net/rnddays2023/RnD.tar.gz && tar xvzf RnD.tar.gz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "3e157e3d-a47f-465d-992c-5cfd1c440ffe",
    "metadata": {
     "tags": []
@@ -21,7 +35,7 @@
    "source": [
     "# I need to install some libriaries...\n",
     "\n",
-    "%pip install -r requirements.txt -q"
+    "!pip install -r requirements.txt -q"
    ]
   },
   {
@@ -195,11 +209,6 @@
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "RnD",
-   "language": "python",
-   "name": "rnd"
-  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
