--- a/virtual_assistant.ipynb
+++ b/virtual_assistant.ipynb
@@ -169,7 +169,7 @@
     "    outputs=\"text\"\n",
     ")\n",
     "\n",
-    "demo.launch(share=True)"
+    "demo.launch(share=True, debug=True)"
    ]
   },
   {
